apps/production/media/plex/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
spec:
  serviceName: plex
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: registry-proxy.local.hejsan.xyz/linuxserver/plex:1.41.0.8994-f2c27da23-ls238
          ports:
            - containerPort: 32400
              name: http
          volumeMounts:
            - name: plex-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: plex-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 50Gi
