apps/production/media/plex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: plex
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
